# xorc-notifications

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  Dockerfile  Dockerfile.apns2  Dockerfile.fcm  Dockerfile.http  Dockerfile.web_push  Jenkinsfile  Makefile  README.md  build.rs  docker-compose.yml
apns2/: Cargo.toml  Jenkinsfile  Makefile  build.rs
apns2/src/: error.rs  main.rs  notifier.rs
config/: apns2.toml  apns2.toml.example  config.toml.example  config.toml.staging  fcm.toml  fcm.toml.example  http_requester.toml  web_push.toml  web_push.toml.example
deploy/: config.mar.template  production.mar.template  staging.mar.template  staging.yaml  supervisor.mar.template  tokio.mar.template
deploy/apns2/: Chart.yaml  values.yaml
deploy/apns2/templates/: NOTES.txt  _helpers.tpl  apns2.toml  configmap.yaml  deployment.yaml  ingress.yaml  service.yaml
deploy/fcm/: Chart.yaml  values.yaml
deploy/fcm/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  fcm.toml  ingress.yaml  service.yaml
deploy/http/: Chart.yaml  values.yaml
deploy/http/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  http.toml  ingress.yaml  service.yaml
deploy/web-push/: Chart.yaml  values.yaml
deploy/web-push/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml  service.yaml  web_push.toml
examples/: send_http_request.rs
src/: artifactory.rs  certificate_registry.rs  config.rs  consumer.rs  consumer_supervisor.rs  error.rs  logger.rs  main.rs  metrics.rs  notifier.rs  producer.rs
src/apns2/: config.rs  consumer.rs  main.rs  notifier.rs  producer.rs
src/apns2/events/: apple_config.rs  apple_notification.rs  google_notification.rs  header.rs  map_field_entry.rs  mod.rs  notification_result.rs  push_notification.rs  webpush_notification.rs
src/common/: config.rs  lib.rs  logger.rs  metrics.rs  system.rs
src/common/events/: mod.rs
src/common/kafka/: mod.rs  offset_counter.rs  push_consumer.rs  request_consumer.rs  response_producer.rs
src/common/metrics/: mod.rs
src/events/: mod.rs
src/fcm/: certificate_registry.rs  config.rs  consumer.rs  main.rs  notifier.rs  producer.rs
src/http_requester/: consumer.rs  main.rs  producer.rs  requester.rs
src/metrics/: instruments.rs  macros.rs  mod.rs  sender.rs
src/pool/: connection_pool.rs  mod.rs  notifier_pool.rs  token_pool.rs
src/web_push/: config.rs  consumer.rs  error.rs  main.rs  notifier.rs  producer.rs
