[package]
name = "xorc_notifications"
version = "0.1.0"
authors = ["Julius de Bruijn <julius.debruijn@360dialog.com>"]

[dependencies]
a2 = "0.3"
fcm = "0.4"
web-push = "0.4"
protobuf = { version = "2.0", features = ["with-bytes"] }
chan-signal = "0.3"
chan = "0.1"
argparse = "0.2"
slog = "2.2"
slog-json = "2.2"
slog-async = "2.3"
slog-term = "2.4"
slog-scope = "4.0"
toml = "0.4"
serde = "1.0"
serde_derive = "1.0"
time = "0.1"
hyper = "0.12"
http = "0.1"
prometheus = "0.4"
lazy_static = "1.0"
postgres-derive = "0.3"
heck = "0.3"
futures = "0.1"
serde_json = "1.0"
tokio = "0.1"
tokio-signal = "0.1"
tokio-timer = "0.1"
rdkafka = "0.16"
chrono = "0.4"
base64 = "0.6"
erased-serde = "0.3"

[build-dependencies]
protoc-rust = "2.0"

[dependencies.postgres]
version = "0.15"
default-features = true
features = ["with-time"]

[lib]
name = "common"
path = "src/common/lib.rs"

[[bin]]
name = "apns2"
path = "src/apns2/main.rs"

[[bin]]
name = "fcm"
path = "src/fcm/main.rs"

[[bin]]
name = "web_push"
path = "src/web_push/main.rs"
