[package]
name = "xorc-notifications"
version = "0.1.0"
authors = ["Julius de Bruijn <julius@nauk.io>"]
license = "Apache-2.0"
readme  = "README.md"
description = "A consumer to send push notifications from Kafka"
keywords    = ["apns", "fcm", "web-push", "consumer", "kafka"]
repository  = "https://github.com/xray-tech/xorc-notifications"
homepage    = "https://github.com/xray-tech/xorc-notifications"

[dependencies]
a2 = "0.3"
fcm = "0.6"
web-push = "0.4"
protobuf = { version = "2.0", features = ["with-bytes"] }
bytes = "0.4"
chan-signal = "0.3"
chan = "0.1"
argparse = "0.2"
slog = { version = "2.3", features = ["erased-serde", "nested-values"] }
slog-json = "2.2"
slog-async = "2.3"
slog-term = "2.4"
slog-scope = "4.0"
toml = "0.4"
serde = "1.0"
serde_derive = "1.0"
time = "0.1"
hyper = "0.12"
hyper-tls = "0.3"
http = "0.1"
prometheus = "0.4"
lazy_static = "1.0"
heck = "0.3"
futures = "0.1"
serde_json = "1.0"
tokio = "0.1"
tokio-signal = "0.1"
tokio-timer = "0.1"
rdkafka = "0.17"
chrono = "0.4"
base64 = "0.6"
erased-serde = "0.3"
regex = "1"

[build-dependencies]
protoc-rust = "2.0"

[dev-dependencies]
clap = "2.32"

[lib]
name = "common"
path = "src/common/lib.rs"

[[bin]]
name = "apns2"
path = "src/apns2/main.rs"

[[bin]]
name = "fcm"
path = "src/fcm/main.rs"

[[bin]]
name = "web_push"
path = "src/web_push/main.rs"

[[bin]]
name = "http_requester"
path = "src/http_requester/main.rs"
