[package]
name = "apns2"
version = "0.1.0"
authors = ["Julius de Bruijn <julius.debruijn@360dialog.com>"]
build = "build.rs"

[dependencies]
a2 = { git = "https://github.com/pimeys/a2" }
protobuf = { version = "2.0", features = ["with-bytes"] }
chan-signal = "0.3"
chan = "0.1"
argparse = "0.2"
env_logger = "0.5"
gelf = "0.2"
log = "0.4"
toml = "0.4"
serde = "1.0"
serde_derive = "1.0"
time = "0.1"
hyper = "0.11"
r2d2 = "0.8"
r2d2_postgres = "0.14"
prometheus = "0.4"
lazy_static = "1.0"
postgres-derive = "0.3"
heck = "0.3"
futures = "0.1"
serde_json = "1.0"
tokio-core = "0.1"
tokio-signal = "0.1"
tokio-timer = "0.1"
rdkafka = "0.16"

[build-dependencies]
protoc-rust = "2.0"
